GNOME Bugzilla – Bug 752689
proxy volume monitor: Plug a memory leak
Last modified: 2015-07-22 16:08:14 UTC
valgrind pointed out a leak here, ann indeed, g_mount_get_root() is documented as transfer full, so we should unref the GFile when we are done with it.
Created attachment 307877 [details] [review] proxy volume monitor: Plug a memory leak
Review of attachment 307877 [details] [review]: Looks good. (small typo in commit message "ann")
Attachment 307877 [details] pushed as d89a848 - proxy volume monitor: Plug a memory leak