proxy volume monitor: Plug a memory leak

valgrind pointed out a leak here, and indeed, g_mount_get_root()
is documented as transfer full, so we should unref the GFile
when we are done with it.

https://bugzilla.gnome.org/show_bug.cgi?id=752689